--- a/handshaker_android/wear/src/main/res/values/strings.xml
+++ b/handshaker_android/wear/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Handshaker</string>
-    <string name="hello_round">Hello Round World!</string>
-    <string name="hello_square">Hello Square World!</string>
+    <string name="hello_round">Congrats! U \'r handshaker!</string>
+    <string name="hello_square">Congrats! U \'r handshaker!</string>
 </resources>
