Tiny actionable style update

--- a/handshaker_android/phoneapp/android/src/main/res/values/strings.xml
+++ b/handshaker_android/phoneapp/android/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
 <resources>
 
     <string name="app_name">Handshaker</string>
-    
+    <string name="app_title">H-A-N-D-S-H-A-K-E-R</string>
+
 </resources>
